--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+<center>
 <div class="header">
 OPINIONS
 </div>
@@ -25,6 +25,6 @@ OPINIONS
      <div class="instagram">
       <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
     </div>
- 
+    </center>
     </body>
 </html>
