--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
 <div class="header">
-OPINIONS
+  <span class="o">OPINIONS</span>
 </div>
 <img src="hat.jpg" class="hat" >
  <div class="content">
