--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title></title>
     <meta name="description" content="Описание страницы">
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+
 
 <div class="header">
   <span class="o">OPINIONS</span>
@@ -25,6 +24,22 @@
      <div class="instagram">
       <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
     </div>
+
+    <div class="comment">
+    <div id="mc-container"></div>
+    <script type="text/javascript">
+    cackle_widget = window.cackle_widget || [];
+    cackle_widget.push({widget: 'Comment', id: 78350});
+    (function() {
+        var mc = document.createElement('script');
+        mc.type = 'text/javascript';
+        mc.async = true;
+        mc.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cackle.me/widget.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
+    })();
+    </script>
+    <a id="mc-link" href="https://cackle.me">Комментарии для сайта <b style="color:#4FA3DA">Cackl</b><b style="color:#F65077">e</b></a>
+  </div>
   
-    </body>
+  </body>
 </html>
