--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
 
 <div class="header">
   <span class="o">OPINIONS</span>
+  <a href="comment.html" class="information">Я НЕ ПРИЗЫВАЮ ВАС, НАЖМИ НА МЕНЯ!</a>
 </div>
 <img src="hat.jpg" class="hat" >
  <div class="content">
-   
-     <p>Всем шалом.</p>
-<p>The site was created for entertainment. I do not want to insult or humiliate anyone. The site was created on request. <p>The bottom line is that a survey will go on instagram to add someone to the site and express their opinion about him or her.</p>
+  Переходите по ссылке и дайте свой голос!
+  <div class="instagram">
+    <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
+  </div>
 
-  <p>No offense, if you are chosen, do not complain about anyone. xd</p>
-
-
-<p>Let there be a vote.</p>
+  <span class="result"> <p>Скоро тут будет чья-то фото!</p></span>
      </div>
-     <div class="instagram">
-      <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
-    </div>
+     
 
     <div class="comment">
     <div id="mc-container"></div>
