--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
   </div>
 
-  <span class="result"> <p>Скоро тут будет чья-то фото!</p></span>
+  <span class="result"> <p>Скоро тут будет чей-то фото!</p></span>
      </div>
      
 
