--- a/index.html
+++ b/index.html
@@ -5,37 +5,33 @@
     <title></title>
     <meta name="description" content="Описание страницы">
     <link rel="stylesheet" href="style.css">
-    <!-- Yandex.Metrika counter -->
+<body>
+<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(86701251, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
+  ym(86701251, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true
+  });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/86701251" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-  </head>
-<body>
-
 <div class="header">
   <span class="o">OPINIONS</span>
   <a href="comment.html" class="information">Я НЕ ПРИЗЫВАЮ ВАС, НАЖМИ НА МЕНЯ!</a>
 </div>
-<img src="hat.jpg" class="hat" >
- <div class="content">
-  Переходите по ссылке и дайте свой голос!
-  <div class="instagram">
-    <a href="https://www.instagram.com/overbafer08/?utm_medium=copy_link"><span>Link to Instagram:</span> <img src="2.png " class="insta"></a> 
-  </div>
+<img src="hat.jpg" class="hat">
 
-  <span class="result"> <p>Скоро тут будет чей-то фото!</p></span>
+ <div class="content">
+  <p>Голосование закончилось:</p> 
+  
+  <img src="Yusuf4ik.jpg" alt="" width="550px" class="yusssuf">
+  <p>Your opinion:</p>
      </div>
-     
 
     <div class="comment">
     <div id="mc-container"></div>
