--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <div class="content">
   <p>Голосование закончилось:</p> 
   
-  <img src="Yusuf4ik.jpg" alt="" width="550px" class="yusssuf">
+   <a href="https://instagram.com/k.m.yusuf.3?utm_medium=copy_link"><img src="Yusuf4ik.jpg" alt="" width="550px" class="yusssuf"></a>
   <p>Your opinion:</p>
      </div>
 
