--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <img src="hat.jpg" class="hat">
 
  <div class="content">
-  <p>Голосование закончилось:</p> 
+  <p>Козлы</p> 
   
-   <a href="https://instagram.com/k.m.yusuf.3?utm_medium=copy_link"><img src="Yusuf4ik.jpg" alt="" width="550px" class="yusssuf"></a>
-  <p>Your opinion:</p>
+   
+  
      </div>
 
     <div class="comment">
