--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 <img src="hat.jpg" class="hat">
 
  <div class="content">
-  <p>Козлы</p> 
-  
-   
-  
+  <p>Козлы</p>
+  <img src="goat.jpg" alt="" width="800px" class="goat">
      </div>
 
     <div class="comment">
