--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Opinions</title>
     <meta name="description" content="Описание страницы">
     <link rel="stylesheet" href="style.css">
 <body>
@@ -28,7 +28,7 @@
 
  <div class="content">
   <p>Козлы</p>
-  <img src="goat.jpg" alt="" width="800px" class="goat">
+  <img src="goat.jpg" alt="" width="750px" class="goat">
      </div>
 
     <div class="comment">
