--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Opinions</title>
+    <title>OPINIONS</title>
     <meta name="description" content="Описание страницы">
     <link rel="stylesheet" href="style.css">
 <body>
