--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>OPINIONS</title>
     <meta name="description" content="Описание страницы">
     <link rel="stylesheet" href="style.css">
-     <link rel="shortcut icon" href="p-h.png" type="image/png">
+      <link rel="shortcut icon" href="p-h.icon" type="image/x-icon">
 <body>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
