--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <center>
-  <p>Film "Who am I"</p>
+  <p>Trailer "Who am I"</p>
   <video width="1000px" height="700px" controls="controls">
     <source src="Кто я — Русский трейлер (2015).mp4">
    </video>
