--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <video width="1000px" height="700px" controls="controls">
     <source src="Кто я — Русский трейлер (2015).mp4">
    </video>
-  
+    <div class="info">
    <p>Бенджамин — молодой компьютерный гений. С детства он мечтает стать супергероем из комиксов и покорить мир. Но в реальном мире он — Никто. Его жизнь неожиданно меняется, когда он встречает свою полную противоположность — харизматичного парня Макса.</p>
+  </div>
   </center>
   </body>
 </html>
