--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div> 
   <div>
   <h1>Фото долгожданной страницы)</h1>
-<img src="winner.png" style="width: 600px; height: 350px;">
+<img src="winner.PNG" style="width: 600px; height: 350px;">
 </div>
 </center>
 </body>
