--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div>
   <h1>Фото долгожданной страницы)</h1>
 <img src="winner.PNG" style="width: 600px; height: 350px;">
-	  <h1>Пожалуй начну завтра). Если есть вопросы, напишите <a href="https://instagram.com/overbafer08?utm_medium=copy_link">Instagram.</a></h1>
+	  <h1>Пожалуй начну завтра). Если вы нихуя не поняли, пишите <a href="https://instagram.com/overbafer08?utm_medium=copy_link">Instagram.</a></h1>
 </div>
 </center>
 </body>
