--- a/questions.html
+++ b/questions.html
@@ -31,6 +31,7 @@ font-weight: normal;
 
 </style>
 <body>
+	<center>
 <div class="area">The time has come..</div>
 
 <div class="Questions">
@@ -60,7 +61,7 @@ font-weight: normal;
 	</div>
 </div>
 <h1 style="text-align: center;">Put your answers here:</h1>
-<div class="search" style="position: relative; left: 830px">
+<div class="search">
 <input type="text" value="https://clck.ru/your answers"  id="myInput">
 <button onclick="myFunction()">Copy text</button>
 </div>
@@ -80,5 +81,6 @@ function myFunction() {
 }
 </script>
 <h1 style="text-align: center;">Good luck for everyone! <i>Regard, Mr.X </i></h1>
+</center>
 </body>
 </html>
