--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <h1>Если вы решили их, получите 5 таких букв. После этого вам придется их складывать. Набор этих букв преобразуется в ссылку которая приведет Вас к странице.</h1>
   </div> 
   
-<h1>Готовы?</h1>
-<h2><a href="questions.html">Да начнется битва!</a></h2>
+<h1 style="position: relative; bottom: -110px">Готовы?</h1>
+<h2 style="position: relative; bottom: -110px"><a href="questions.html">Да начнется битва!</a></h2>
 </center>
 </body>
 </html>
