--- a/questions.html
+++ b/questions.html
@@ -62,7 +62,7 @@ font-weight: normal;
 </div>
 <h1 style="text-align: center;">Put your answers here:</h1>
 <div class="search">
-<input type="text" value="https://clck.ru/your answers"  id="myInput">
+<input type="text" value="https://clck.ru/your answers"  id="myInput" style = "height:35px">
 <button onclick="myFunction()">Copy text</button>
 </div>
 
