--- a/questions.html
+++ b/questions.html
@@ -16,71 +16,16 @@ font-weight: normal;
 		color: white;
 		font-family: Montserrat-Light;
 	}
-	.area {
-  text-align: center;
-  font-size: 6.5em;
-  color: #fff;
-  letter-spacing: -7px;
-  font-weight: 700;
-  text-transform: uppercase;
-  animation: blur .50s ease-out infinite;
-  text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff;
-  position: relative;
-  bottom: -10px;
+
 }
 
 </style>
 <body>
 	<center>
-<div class="area">The time has come..</div>
-
-<div class="Questions">
-	<div class="q_1">
-		<h1>Вопрос 1:</h1>
-<p>Назовите хоть один день, не называя чисел (1, 2, 3,..) и названий дней (понедельник, вторник, среда…)</p>
-	</div>
-	<div class="q_2">
-		<h1>Вопрос 2:</h1>
-		<p>Из какой посуды нельзя ничего поесть?</p>
-	</div>
-	<div class="q_3">
-		<h1>Вопрос 3:</h1>
-		<p>Очень быстрых два коня
-По снегам несут меня —
-Через луг к березке,
-тянут две полоски.</p>
-
-	</div>
-	<div class="q_4">
-		<h1>Вопрос 4:</h1>
-		<p>Физическая величина -> Ампер</p>
-	</div>
-	<div class="q_5">
-		<h1>Вопрос 5:</h1>
-		<p>Услышав его, тебе может стать весело или грустно.</p>
-	</div>
+<div class="cong" style="position: relative; top: 350px">
+<marquee behavior="alternate" direction="right"><h1>Thank you for your participation, <a href = "https://www.instagram.com/_incognito_04_/ ">incognito _04_ </a>!!!</h1></marquee>
 </div>
-<h1 style="text-align: center;">Put your answers here:</h1>
-<div class="search">
-<input type="text" value="https://clck.ru/your answers"  id="myInput" style = "height:35px">
-<button onclick="myFunction()">Copy text</button>
-</div>
-
-<script type="text/javascript">
-function myFunction() {
- 
-  var copyText = document.getElementById("myInput");
-
-  copyText.select();
-
- 
-  document.execCommand("copy");
-
-
-  alert("УСПЕШНО СКОПИРОВАН!");
-}
-</script>
-<h1 style="text-align: center;">Good luck for everyone! <i>Regard, Mr.X </i></h1>
+<h1 style="position: absolute; top:700px; left: 850px">Regards, MR.X</h1>
 </center>
 </body>
 </html>
