--- a/questions.html
+++ b/questions.html
@@ -25,7 +25,7 @@ font-weight: normal;
 <div class="cong" style="position: relative; top: 350px">
 <marquee behavior="alternate" direction="right"><h1>Thank you for your participation, <a href = "https://www.instagram.com/_incognito_04_/ ">incognito _04_ </a>!!!</h1></marquee>
 </div>
-<h1 style="position: absolute; top:700px; left: 850px">Regards, MR.X</h1>
+<h1 style="position: relative; top:700px;">Regards, MR.X</h1>
 </center>
 </body>
 </html>
