--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="area">Цикада</div>
 
 
-<h2 style="position: relative; bottom: -110px"><a href="questions.html">Winner</a></h2>
+<h2 style="position: relative; top: 350px; font-size: 150px" ><a href="questions.html">Winner</a></h2>
 </center>
 </body>
 </html>
