--- a/letsgo.html
+++ b/letsgo.html
@@ -38,6 +38,6 @@ transform: translate(-50%, -50%);
 </head>
 <body>
 <p class="blink">>>Free Kevin</p>
-<audio src="1.mp3" class="_blink" controls>
+<!--<audio src="1.mp3" class="_blink" controls>-->
 </audio>
 </html>
