--- a/letsgo.html
+++ b/letsgo.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8">
-<title>Fuck you</title>
+<title>Welcome</title>
 <style media="screen">
 @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:wght@600&family=Work+Sans&display=swap');
 body{
